[gd_scene load_steps=3 format=3 uid="uid://b2qbuxif5ivby"]

[ext_resource type="Script" path="res://src/colorpalette/ColorSwitchGrid.gd" id="1_7r6e0"]
[ext_resource type="Texture2D" uid="uid://nyd7ybgj0r6y" path="res://assets/common/plus.png" id="2_3a1e8"]

[node name="ColorSwitchGrid" type="GridContainer"]
offset_right = 250.0
offset_bottom = 60.0
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 10
script = ExtResource("1_7r6e0")

[node name="AddSwitchBtn" type="Button" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("2_3a1e8")
flat = true
icon_alignment = 1

[connection signal="pressed" from="AddSwitchBtn" to="." method="_on_add_switch_btn_pressed"]
